
2007-07-21:

	* reverse.sh: Unterscheide besser zwischen "Teilnehmer nicht gefunden"
	und Fehler bei der Abfrage: Nur "nicht gefunden" wird gecachet.

	Immer die busybox-Version von 'nc' verwenden. (Es gibt jetzt ein
	netcat-Paket im ds-mod, dessen 'nc' sich anders verhält.)

2007-07-28:

	callmonitor 1.10 veröffentlicht

	* telefonbuch.sh: Verbessert für den Fall, dass es zwei oder mehr
	Suchergebnisse gibt

	* dasoertliche.sh: Findet jetzt auch Einträge, die wie manche
	Firmeneinträge besonders hervorgehoben sind.

2007-08-11:

	* callmonitor: Rückwärtssuche-Cache bei Neustart des Callmonitors
	löschen (um vermeintliche Fehler aufgrund geänderter
	Rückwärtssuche-Parameter zu vermeiden)

2007-08-12:

	callmonitor 1.10.1 veröffentlicht

2007-08-18:

	* maint.cgi: Button, um den Rückwärtssuche-Cache manuell zu leeren.

	* rc.callmonitor: Listener-Konversioncode entfernt (für Format vor
	v1.0; wer so einen alten Callmonitor immer noch benutzt, ist selbst
	schuld ;-))

2007-09-15:

	* config: "config wlan [on|off]" repariert

	callmonitor 1.10.2 veröffentlicht

2007-09-22:

	* config.sh: Neue Funktion "pushservice", um genau diesen sofort
	auszulösen.

2007-10-07:

	* messages.sh: xboxmessage verträgt neben Kommas auch keine
	Semikolons, werden nun durch Punkt ersetzt (Danke an macknight)

2008-03-22:

	* config.sh: Neuer Pseudowert "toggle" schaltet zwischen "on" und
	"off" um, z.B. "config forward 1 toggle", um das erste Portforwarding
	im Wechsel an- und auszuschalten

2008-03-28:

	* config.sh: 'config dect' zum An- und Abschalten des DECT-Teils der
	7270 ff.

2008-03-29:

	* reverse: Rückwärtssuche bei Google und DasTelefonbuch angepasst

	callmonitor 1.10.3 veröffentlicht

2008-04-19:

	* Web interface: Kleine Performance-Steigerung

2008-05-04:

	* phonebook: Unterstützung für neue AVM-Telefonbücher (mit mehreren
	Rufnummern pro Eintrag); Dank an wengi

	* Makefile: Umstellung von Mod 'dsmod' auf 'freetz'

2008-05-05:

	callmonitor-1.11 veröffentlicht